codex-rs/tui/src/snapshots/codex_tui__keymap_setup__tests__keymap_picker_custom.snap
---
source: tui/src/keymap_setup.rs
expression: "render_picker(params, 120)"
---

  Keymap
  All configurable shortcuts.
  110 actions, 1 customized, 3 unbound.

  [All]  Common  Customized (1)  Unbound (3)  App  Composer  Editor  Vim  Navigation  Approval  Debug

  Type to search shortcuts
› Global         Open Transcript            ctrl-t
  Global         Open External Editor       ctrl-g
  Global         Copy                       ctrl-o
  Global         Clear Terminal             ctrl-l
  Global       - Toggle Vim Mode            unbound
  Global       - Cycle Permission Profile   unbound
  Global         Toggle Raw Output          alt-r
  Global         Toggle Side Conversation   ctrl-/

  left/right group · enter edit shortcut · * custom · - unbound · esc close
